style/modules/header/_sr-bar.scss
// main: ../../flattish.scss

// subreddits bar
.res-nightmode #sr-header-area,
 #sr-header-area {
  background-color: rgba($tooltip, 0.25) !important;
}

#sr-header-area {
  position: relative;
  top: -30px;
  z-index: 20;
  height: em(30, 10);
  border: 0;
  font-size: 10px;
  line-height: em(30, 10);
  overflow: visible !important; // for RES subreddit manager users

  // triangle icon
  &::after {
    position: absolute;
    top: 25px;
    width: 100%;
    content: '▼';
    color: rgba($white, 0.57);
    font-size: 14px;
    text-align: center;
    text-shadow: $text-shadow;
  }

  &:hover {
    top: 0;

    &::after {
      opacity: 0;
      height: 0;
    }
  }

  // positions text
  .sr-list {
    // margin: 0;
    // padding: 0;
  }

  // "my subreddits" menu button
  .dropdown.srdrop {
    height: em(30, 10);
    padding: 0;
    cursor: pointer;

    .selected {
      // replace "my subreddits" with burger
      margin: em(14, 10) em(10, 10) em(10, 10);
      padding: 0;
      text-indent: -999em;
    }
  }

  .drop-choices.srdrop {
    overflow-y: scroll;

    &.inuse { margin-left: em(10, 10); }
  }

  .dropdown.srdrop {
    .selected {
      // replace "my subreddits" with burger
      background: none;
      @include burger(em(20, 10), em(2, 10), em(4, 10), 0, $dark-hint-text);
    }

    // change burger color on mouseover
    &:hover {
      .selected,
      .selected::after,
      .selected::before {
        background-color: $dark-icons;
      }
    }
  }

  .sr-bar a,
  .separator,
  #RESShortcuts {
    color: $dark-text;
  }
}

// right side edit button
#sr-more-link {
  margin: 0;
  padding: 0 5px;
  color: set-text-color($accent, text);
  background-color: $accent !important;
}

